[package]
name = "htn-backend"
version = "0.1.0"
edition = "2021"
license = "AGPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = "1.0.152"
diesel = { version = "2.0.3", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde_json = "1.0.93"
chrono = "0.4.23"
